--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,12 +7,22 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
-
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-latest  
+  
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
+    - name: Set up JDK 11 for x64
+    
+    - uses: actions/setup-java@v4
+      with:
+       java-version: '11'
+       distribution: 'temurin'
+       architecture: x64
+       
+    - name: Run the Maven verify phase
+      run: mvn --batch-mode --update-snapshots verify
+    
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag eexperts:latest
+     
