--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v5
     - name: Set up JDK 11 for x64
     
-    - uses: actions/setup-java@v4
+      uses: actions/setup-java@v4
       with:
        java-version: '11'
        distribution: 'temurin'
