--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,7 +25,20 @@ jobs:
 
     - name: Build and run tests with Maven
       run: mvn test --batch-mode --file pom.xml
-    
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag eexperts:latest
+      run: docker push bhadoria/eexperts:latest
+      
+
+
+
+
+    
      
