--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,9 +23,6 @@ jobs:
     - name: Run the Maven verify phase
       run: mvn --batch-mode --update-snapshots verify
 
-    - name: Build and run tests with Maven
-      run: mvn test --batch-mode --file pom.xml
-
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
@@ -35,8 +32,8 @@ jobs:
     - name: Build the Docker image
       run: |
          docker build . --file Dockerfile --tag eexperts:latest
-         docker push bhadoria/eexperts:latest
-      
+         docker push ${{ secrets.DOCKERHUB_USERNAME }}/eexperts:latest
+
 
 
 
