--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,7 +31,7 @@ jobs:
         
     - name: Build the Docker image
       run: |
-         docker build . --file Dockerfile --tag eexperts:latest
+         docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/eexperts:latest
          docker push ${{ secrets.DOCKERHUB_USERNAME }}/eexperts:latest
 
 
